prevent overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
 html {
   overflow-x: hidden !important;
   scroll-behavior: smooth;
+  overflow-x: hidden !important;
 }
 
 body {
